force-app/main/default/objects/WorkType/fields/HRCFSL_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Activity_Type__c</fullName>
    <description>Custom field used to store the Activity Type associated with a Work Type. Used so that multiple Salesforce Work Types can be related to the same JDE Doc Type/Activity Type combination.</description>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HRCFSL_Activity_Type</valueSetName>
    </valueSet>
</CustomField>