force-app/main/default/objects/WorkType/fields/HRCSVC_After_Due_Date_Kitting_Threshold__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_After_Due_Date_Kitting_Threshold__c</fullName>
    <label>After Due Date Kitting Threshold (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>