force-app/main/default/objects/WorkType/fields/HRCSVC_Allowed_Protocol_Categories__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Allowed_Protocol_Categories__c</fullName>
    <label>Allowed Protocol Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HRCSVC_Protocol_Category</valueSetName>
    </valueSet>
</CustomField>