force-app/main/default/objects/WorkType/fields/HRCSVC_Allowed_Protocol_Categories_Text__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Allowed_Protocol_Categories_Text__c</fullName>
    <label>Allowed Protocol Categories (Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>