force-app/main/default/objects/WorkType/fields/HRCSVC_Kit_If_Generated_From_MP__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Kit_If_Generated_From_MP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kit If Generated From Maintenance Plan</label>
    <type>Checkbox</type>
</CustomField>