force-app/main/default/objects/WorkType/fields/HRCSVC_Kit_If_Not_MP_Generated__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Kit_If_Not_MP_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kit If Not Maintenance Plan Generated</label>
    <type>Checkbox</type>
</CustomField>