force-app/main/default/objects/WorkType/fields/HRCSVC_Service_Territory_Override__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Service_Territory_Override__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Territory Override</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Work Types</relationshipLabel>
    <relationshipName>Work_Types</relationshipName>
    <type>Lookup</type>
</CustomField>